syntax = "proto3";

package newsPackage;

service News {
  rpc getNews(getNewsItemsRequest) returns (newsItems);
  rpc addNews(createNewsItemRequest) returns (voidNoParam);
  rpc updateNews(updateNewsItemRequest) returns (voidNoParam);
  rpc deleteNews(newsId) returns (voidNoParam);
}

enum Order {
  DESC = 0;
  ASC = 1;
}

message voidNoParam {}

message getNewsItemsRequest {
 optional string title = 1;
 optional string date = 2;
 optional Order sortByTitle = 3;
 optional Order sortByDate = 4;
}

message createNewsItemRequest {
    string date = 1; 
    string title = 2;
    string shortDescription = 3;
    string text = 4;
}

message updateNewsItemRequest {
    string _id = 1;
    optional string date = 2; 
    optional string title = 3;
    optional string shortDescription = 4;
    optional string text = 5;
}

message newsItem {
  string _id = 1;
  string date = 2; 
  string title = 3;
  string shortDescription = 4;
  string text = 5;
}

message newsItems {
  repeated newsItem items = 1;
}

message newsId {
  string _id = 1;
}